v2.35.0: the platform advances — RELEASE300 → RELEASE310 (ledger 84, David's GO) (#566)
Property flip after the dossier + the v2.21.6 slf4j root-cause.
Gauntlets ALL PASS on the assembled 310 app: boot laws (6s, 0 spawns,
0 SEVERE), FX 26 browser + DevTools DOM, all nine chords, 11-NBM
update-site dry run, SPI example green vs new core. Update boundary
measured: 310 dependency floors hold ≤2.34.5 installs back honestly;
installers carry them across (v1.256.0 timing law).

Co-authored-by: Claude Fable 5 <noreply@anthropic.com>